# powierza-coefficient

./: Cargo.toml  README.md
demo-nodejs-using-wasm/: pnpm-lock.yaml
demo/lib/: main.js  main.js.map
demo/src/: main.coffee
pkg/: README.md  package.json  powierza_coefficient.d.ts  powierza_coefficient.js  powierza_coefficient_bg.wasm  powierza_coefficient_bg.wasm.d.ts  rustybuzz_wasm.d.ts  rustybuzz_wasm.js  rustybuzz_wasm_bg.wasm.d.ts
src/: lib.rs
