[package]
name = "powierza-coefficient"
version = "0.0.0"
authors = ["Your Name <you@example.com>"]
description = "String similarity algorithms"
license = "MIT/Apache-2.0"
repository = "https://github.com/loveencounterflow/powierza-coefficient"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
powierza-coefficient = "*"
strsim = "*"
# acc to https://rustwasm.github.io/wasm-bindgen/reference/arbitrary-data-with-serde.html
# thx to https://stackoverflow.com/a/52819347/256361
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.32"
serde_derive = "1.0.80"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

# [dev-dependencies]
pico-args = "0.3"
libc = "0.2"
hex = "0.4"
lazy_static = "1.4"
unicode-linebreak = "0.1"
